[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:transfa/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:CHANGELOG.md]
search = 
	[Unreleased]
	------------
replace = 
	[Unreleased]
	------------
	
	[v{new_version}] - {utcnow:%%Y-%%m-%%d}
	------------------

[bdist_wheel]
universal = 1

[metadata]
name = transfa-python-sdk
version = "{current_version}"
url = https://transfapp.com
license = MIT
author = Kolawole Mangabo
author_email = kolawole.mangabo@transfapp.com
description = This is the official python SDK for the Transfa API.
long_description = file: README.md
long_description_content_type = text/markdown
keyword = transfa api payment mtn-momo moov
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: Implementation :: PyPy
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests
    importlib-metadata; python_version<"3.8"
	pytest

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    tests*
	.github*